fixes bug 193017 "downloading via ftp doesn't proceed" r=dougt sr=brendan a=dbaron